# sokupad-rpa-api

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  export.sh  pyproject.toml  server.py
const/: __init__.py
const/model/: __init__.py
const/page/: __init__.py  chiho_page.yaml  page.yaml  pages.yaml
const/status/: __init__.py
entity/state/: __init__.py
infra/: sokupad_client.py
infra/dao/: __init__.py  pickle_rpa_state_dao.py
rpa/: __init__.py  buy.py  deposit.py
tests/: test_server.py
