[tool.poetry]
name = "sokupad-rpa-api"
version = "0.1.0"
description = ""
authors = ["宮地宏樹 <hdekm852@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9.4"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
