[tool.poetry]
name = "sokupad-rpa-api"
version = "0.1.0"
description = ""
authors = ["宮地宏樹 <hdekm852@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9.4"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
selenium = "^3.141.0"
autoload-module = "^1.2.0"
PyYAML = "^5.4.1"
chromedriver-binary-auto = "^0.1.1"

[tool.poetry.dev-dependencies]
requests = "^2.25.1"
pytest = "^6.2.3"
debugpy = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
